Fixed mobile whitespace issue with proper divs and css properties.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,20 +1,22 @@
-body, html {
-  height: 100%;
+html, body {
   width: 100%;
-}
-
-.map {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 0;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 .overlay {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    z-index: 2;
-    pointer-events: none;
+  position: relative;
+  top: -100%;
+  bottom: -100%;
+  z-index: 2;
+  pointer-events: none;
+  overflow-x: hidden;
+}
+
+.sidepanel {
+  pointer-events: auto;
+  overflow: auto;
+  min-width: 260px;
 }
